First (unfinished!) order for adding/removing own playlists
Known issues:
- Pressing <enter> on the playlist input inadvertently triggers adding the playlist
- + / x buttons should be present only when relevant
- Clicking list icon in playlist input should show the full list
- Code is a mess, must be cleaned up

--- a/Python/static/css/playlists.css
+++ b/Python/static/css/playlists.css
@@ -11,7 +11,7 @@
  * Colors: https://www.computerhope.com/htmcolor.htm
  */
 
-.preset-grid {
+.presets-grid {
 	display: grid;
 	margin-bottom: 20px;
 	grid-template-columns: 0.5fr 1.5fr
