--- a/Python/static/css/oradio3.css
+++ b/Python/static/css/oradio3.css
@@ -61,6 +61,24 @@ label {
 	font-weight: bold;
 }
 
+/* Make drop down icon stand out more */
+.datalist-container {
+	position: relative;
+	display: inline-block;
+	width: 100%;
+}
+.datalist-container .custom-icon {
+	position: absolute;
+	right: 10px;
+	top: 30%;
+	transform: translateY(-50%);
+	pointer-events: none; /* Ensures clicking is not blocked */
+	font-size: 20px;
+	color: #fff;	/* White */
+}
+
+/* OMJ: TODO: dropdown icon van select gelijk maken aan dropdown icon van datalist */
+
 select {
 	width: 100%;
 	height: 40px;
