--- a/Python/templates/menu.html
+++ b/Python/templates/menu.html
@@ -3,8 +3,8 @@
 /* Menu bar styling */
 nav {
 	display: flex;
-	background-color: #1F2933;
-	border-top: 1px solid #8E8D8A;
+	background-color: var(--oradio-list);
+	border-top: 1px solid var(--oradio-border);
 	position: fixed;
 	width: 440px;
 	bottom: 0;
@@ -19,7 +19,7 @@ nav a {
 }
 
 nav a:hover {
-	background: #8E8D8A;
+	background: var(--oradio-border);
 }
 
 .waiting {
