--- a/Python/static/css/playlists.css
+++ b/Python/static/css/playlists.css
@@ -32,8 +32,7 @@
 	line-height: 1.5;
 	margin-bottom: 20px;
 	border-radius: 5px;
-	background-color: #14213D;
-	color: rgb(234, 232, 221);
+	background-color: var(--oradio-list);
 	max-height: 200px;
 	overflow-y: auto;
 	scrollbar-width: none;
