--- a/Python/static/css/oradio3.css
+++ b/Python/static/css/oradio3.css
@@ -27,14 +27,16 @@
 
 body {
 	font-family: 'Roboto', Helvetica, Arial, sans-serif;
-	font-size: 14px;
+	font-size: 16px;
 	margin: 0;
 	padding: 0;
 	background-color: var(--oradio-background);
 	color: var(--oradio-text);
 	display: flex;
 	justify-content: center;
+/*
 	align-items: center;
+*/
 	min-height: 100vh;
 }
 
@@ -43,8 +45,6 @@ body {
 	width: 100%;
 	padding: 20px;
 	margin-bottom: 60px;		/* allow space for bottom menu */
-	border-radius: 10px;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .logo {
@@ -64,8 +64,7 @@ h1 {
 	border-radius: 5px;
 	padding: 10px;
 	font-size: 16px;
-	margin-left: -10px;
-	margin-bottom: 20px;
+	margin: 20px 0 20px -10px;
 	text-align: center;
 }
 
@@ -86,7 +85,7 @@ select {
 	border-radius: 5px;
 	border: 1px solid #ccc;
 	box-sizing: border-box;
-	font-size: 14px;
+	font-size: 16px;
 	background-color: var(--oradio-background);
 	color: var(--oradio-text);
 }
@@ -99,7 +98,7 @@ input {
 	border-radius: 5px;
 	border: 1px solid var(--oradio-border);
 	box-sizing: border-box;
-	font-size: 14px;
+	font-size: 16px;
 	background-color: var(--oradio-background);
 	color: var(--oradio-text);
 }
@@ -136,7 +135,12 @@ li {
 .notification {
 	text-align: center;
 	line-height: 1.5;
-	margin-bottom: 10px;
+	margin: 10px 0 10px 0;
+	display: none;
+}
+
+.success {
+	color: var(--oradio-select);
 }
 
 .warning {
