Improve layout for better readability

--- a/Python/static/css/playlists.css
+++ b/Python/static/css/playlists.css
@@ -30,10 +30,42 @@
 .file-list {
 	padding: 0 5px 0 5px;
 	line-height: 1.5;
-	margin-bottom: 20px;
+	margin: 10px 0 20px 0;
 	border-radius: 5px;
 	background-color: var(--oradio-list);
 	max-height: 200px;
 	overflow-y: auto;
+	-webkit-overflow-scrolling: touch;
+/*
 	scrollbar-width: none;
+*/
+}
+.file-list {
+  border: 1px solid var(--oradio-border);
+
+	padding: 0 5px 0 5px;
+	line-height: 1.5;
+	margin: 20px 0 20px 0;
+	border-radius: 5px;
+	background-color: var(--oradio-list);
+	max-height: 200px;
+	overflow-y: auto;
+	-webkit-overflow-scrolling: touch;
+}
+
+.file-list::-webkit-scrollbar {
+  width: 8px;
+}
+
+.file-list::-webkit-scrollbar-track {
+  background: var(--oradio-border);
+}
+
+.file-list::-webkit-scrollbar-thumb {
+  background: var(--oradio-select);
+  border-radius: 4px;
+}
+
+.file-list::-webkit-scrollbar-thumb:hover {
+  background: var(--oradio-select);
 }
